--- a/DarkAccess/Back-End/.env
+++ b/DarkAccess/Back-End/.env
@@ -1,2 +1,8 @@
+DB_HOST=db_darkaccess
+DB_USER=pinguin
+DB_PASS=postgress_pinguin_77
+DB_NAME=darkaccess
+DB_PORT=5432
+
 API_HOST=34.132.60.57
 API_PORT=3001
