update sonar file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,8 @@ sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
+
+# Disable C/C++ analysis (you do not use these languages)
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
