--- a/DarkAccess/Back-End/Dockerfile
+++ b/DarkAccess/Back-End/Dockerfile
@@ -1,20 +1,11 @@
-# Usar Node LTS
-FROM node:18-alpine
+FROM node:18-slim
 
-# Criar pasta da aplicação
 WORKDIR /app
 
-# Copiar package.json
 COPY package*.json ./
-
-# Instalar dependências
 RUN npm install
 
-# Copiar todo o restante do backend
 COPY . .
 
-# Backend roda na porta 3001
 EXPOSE 3001
-
-# Comando para iniciar
 CMD ["npm", "start"]
