--- a/DarkAccess/Labs/xss-challenge/tech-horizon/nginx.conf
+++ b/DarkAccess/Labs/xss-challenge/tech-horizon/nginx.conf
@@ -1,14 +1,24 @@
 server {
     listen 80;
+    server_name _;
 
-    # Corrige prefixo /challenge/<sessionId>
-    location / {
-        try_files $uri $uri/ /index.html;
+    # Corrige o prefixo do Traefik
+    location ~ ^/challenge/([a-f0-9-]+)/(.+)$ {
+        # Remove /challenge/<id>/ do caminho
+        rewrite ^/challenge/([a-f0-9-]+)/(.*)$ /$2 break;
+
+        # index.html precisa ser reescrito também
+        try_files $uri /index.html;
     }
 
-    # Garante MIME correto dos assets
+    # Rota padrão para React/Vite
+    location / {
+        try_files $uri /index.html;
+    }
+
+    # Arquivos estáticos (css, js, assets, etc)
     location /assets/ {
-        add_header Content-Type "";
+        add_header Cache-Control "public, max-age=31536000, immutable";
         try_files $uri =404;
     }
 }
