--- a/DarkAccess/Labs/xss-challenge/tech-horizon/nginx.conf
+++ b/DarkAccess/Labs/xss-challenge/tech-horizon/nginx.conf
@@ -2,23 +2,23 @@ server {
     listen 80;
     server_name _;
 
-    # Corrige o prefixo do Traefik
-    location ~ ^/challenge/([a-f0-9-]+)/(.+)$ {
-        # Remove /challenge/<id>/ do caminho
+    location ~ ^/challenge/([a-f0-9-]+)/(.*)$ {
         rewrite ^/challenge/([a-f0-9-]+)/(.*)$ /$2 break;
-
-        # index.html precisa ser reescrito também
         try_files $uri /index.html;
     }
 
-    # Rota padrão para React/Vite
+
+    location /assets/ {
+        try_files $uri =404;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+
+    location ~* \.(js|css|map)$ {
+        try_files $uri =404;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+
     location / {
         try_files $uri /index.html;
-    }
-
-    # Arquivos estáticos (css, js, assets, etc)
-    location /assets/ {
-        add_header Cache-Control "public, max-age=31536000, immutable";
-        try_files $uri =404;
     }
 }
