--- a/DarkAccess/Labs/xss-challenge/tech-horizon/nginx.conf
+++ b/DarkAccess/Labs/xss-challenge/tech-horizon/nginx.conf
@@ -2,9 +2,12 @@ server {
     listen 80;
     server_name _;
 
-    location ~ ^/challenge/([a-f0-9-]+)/(.*)$ {
+    root /usr/share/nginx/html;
+
+    location ~ ^/challenge/([a-f0-9-]+)/(.+)$ {
         rewrite ^/challenge/([a-f0-9-]+)/(.*)$ /$2 break;
-        try_files $uri /index.html;
+
+        try_files $uri $uri/ /index.html;
     }
 
 
@@ -13,10 +16,6 @@ server {
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
-    location ~* \.(js|css|map)$ {
-        try_files $uri =404;
-        add_header Cache-Control "public, max-age=31536000, immutable";
-    }
 
     location / {
         try_files $uri /index.html;
