--- a/DarkAccess/Labs/xss-challenge/tech-horizon/nginx.conf
+++ b/DarkAccess/Labs/xss-challenge/tech-horizon/nginx.conf
@@ -2,22 +2,19 @@ server {
     listen 80;
     server_name _;
 
-    root /usr/share/nginx/html;
-
-    location ~ ^/challenge/([a-f0-9-]+)/(.+)$ {
-        rewrite ^/challenge/([a-f0-9-]+)/(.*)$ /$2 break;
-
-        try_files $uri $uri/ /index.html;
+    # Remove o prefixo /challenge/<id> SOMENTE uma vez
+    location ~ ^/challenge/([a-f0-9-]+)/?(.*)$ {
+        rewrite ^/challenge/([a-f0-9-]+)/?(.*)$ /$2 last;
     }
 
-
+    # Arquivos estáticos
     location /assets/ {
         try_files $uri =404;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
-
+    # SPA fallback
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
