--- a/DarkAccess/Labs/xss-challenge/tech-horizon/nginx.conf
+++ b/DarkAccess/Labs/xss-challenge/tech-horizon/nginx.conf
@@ -2,19 +2,21 @@ server {
     listen 80;
     server_name _;
 
-    # Remove o prefixo /challenge/<id> SOMENTE uma vez
-    location ~ ^/challenge/([a-f0-9-]+)/?(.*)$ {
-        rewrite ^/challenge/([a-f0-9-]+)/?(.*)$ /$2 last;
-    }
-
-    # Arquivos estáticos
-    location /assets/ {
-        try_files $uri =404;
-        add_header Cache-Control "public, max-age=31536000, immutable";
-    }
-
-    # SPA fallback
-    location / {
+    # 1. Remove o prefixo /challenge/<id>/ antes de servir arquivos
+    location ~ ^/challenge/([a-f0-9-]+)/(.*)$ {
+        alias /usr/share/nginx/html/$2;
         try_files $uri $uri/ /index.html;
+    }
+
+    # 2. Rota padrão / (fallback)
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # 3. Arquivos estáticos "assets"
+    location /assets/ {
+        root /usr/share/nginx/html;
+        try_files $uri =404;
     }
 }
