--- a/DarkAccess/Labs/lab02-osdb/Dockerfile
+++ b/DarkAccess/Labs/lab02-osdb/Dockerfile
@@ -1,28 +1,25 @@
-FROM node:18-alpine
+FROM node:18-alpine as build
 
-# instalar sqlite e utilitários básicos
 RUN apk add --no-cache bash sqlite coreutils
 
-# criar usuário não-root
 RUN adduser -D -h /home/labuser labuser
 
 WORKDIR /lab
 
-# copiar arquivos do lab
 COPY files/ ./files/
-COPY run.sh seed_db.sql server.js index.html ./
-
-# instalar dependências do Node
+COPY run.sh seed_db.sql server.js index.html ./ 
 RUN npm install express body-parser
 
-# permissões
 RUN chmod +x /lab/run.sh && chown -R labuser:labuser /lab
-
-# criar banco inicial
 RUN sqlite3 /lab/main.sqlite < /lab/seed_db.sql && chown labuser:labuser /lab/main.sqlite
 
-USER labuser
+# ---------------- NGINX FINAL ------------------
 
-EXPOSE 3000
+FROM nginx:stable-alpine
 
-CMD ["node", "server.js"]
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /lab /lab
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
