--- a/DarkAccess/Labs/lab02-osdb/nginx.conf
+++ b/DarkAccess/Labs/lab02-osdb/nginx.conf
@@ -2,15 +2,14 @@ server {
     listen 80;
     server_name _;
 
-    # ----- Arquivos estáticos -----
+    # Arquivos estáticos
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # ----- Proxy para API do terminal -----
+    # API do terminal
     location /api/ {
-        proxy_pass http://localhost:3000;
-
+        proxy_pass http://127.0.0.1:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
