--- a/DarkAccess/Labs/lab02-osdb/nginx.conf
+++ b/DarkAccess/Labs/lab02-osdb/nginx.conf
@@ -4,10 +4,10 @@ server {
 
     # Arquivos estáticos
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 
-    # API do terminal
+    # API para o backend Node
     location /api/ {
         proxy_pass http://127.0.0.1:3000;
         proxy_set_header Host $host;
