--- a/DarkAccess/Labs/lab02-osdb/Dockerfile
+++ b/DarkAccess/Labs/lab02-osdb/Dockerfile
@@ -1,36 +1,30 @@
-# ---------- BUILD NODE BACKEND ----------
+### BUILD (Node)
 FROM node:18-alpine AS build
 
-WORKDIR /lab
-
 RUN apk add --no-cache bash sqlite coreutils
-
 RUN adduser -D -h /home/labuser labuser
+WORKDIR /lab
 
 COPY files/ ./files/
 COPY run.sh seed_db.sql server.js index.html ./
 
 RUN npm install express body-parser
-
 RUN chmod +x /lab/run.sh && chown -R labuser:labuser /lab
 RUN sqlite3 /lab/main.sqlite < /lab/seed_db.sql && chown labuser:labuser /lab/main.sqlite
 
-
-# ---------- FINAL IMAGE WITH NGINX + NODE ----------
+### FINAL (NGINX)
 FROM nginx:stable-alpine
 
-# Copia nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copia arquivos estáticos
+# FRONTEND
 COPY --from=build /lab/index.html /usr/share/nginx/html/index.html
 COPY --from=build /lab/files /usr/share/nginx/html/files
 
-# Copia tudo do lab (Node + DB + scripts)
+# BACKEND (node)
 COPY --from=build /lab /lab
+WORKDIR /lab
 
-# Instala Node dentro da imagem final
-RUN apk add --no-cache nodejs npm
+EXPOSE 80
 
-# Roda Node + Nginx juntos
-CMD sh -c "node /lab/server.js & nginx -g 'daemon off;'"
+CMD sh -c "node server.js & nginx -g 'daemon off;'"
