--- a/DarkAccess/Labs/lab02-osdb/nginx.conf
+++ b/DarkAccess/Labs/lab02-osdb/nginx.conf
@@ -4,10 +4,11 @@ server {
 
     # Arquivos estáticos
     location / {
-        try_files $uri /index.html;
+        root /usr/share/nginx/html;
+        index index.html;
     }
 
-    # API para o backend Node
+    # API do terminal (node rodando dentro do container na porta 3000)
     location /api/ {
         proxy_pass http://127.0.0.1:3000;
         proxy_set_header Host $host;
