--- a/DarkAccess/Labs/lab02-osdb/nginx.conf
+++ b/DarkAccess/Labs/lab02-osdb/nginx.conf
@@ -2,13 +2,14 @@ server {
     listen 80;
     server_name _;
 
+    root /usr/share/nginx/html;
+
     # Arquivos estáticos
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # API do terminal (node rodando dentro do container na porta 3000)
+    # Proxy para o Node.js
     location /api/ {
         proxy_pass http://127.0.0.1:3000;
         proxy_set_header Host $host;
