--- a/DarkAccess/Labs/lab02-osdb/nginx.conf
+++ b/DarkAccess/Labs/lab02-osdb/nginx.conf
@@ -1,19 +1,36 @@
-server {
-    listen 80;
-    server_name _;
+# NGINX MAIN CONFIG
+user  nginx;
+worker_processes  auto;
 
-    root /usr/share/nginx/html;
+events {
+    worker_connections 1024;
+}
 
-    # Arquivos estáticos
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+http {
 
-    # Proxy para o Node.js
-    location /api/ {
-        proxy_pass http://127.0.0.1:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    server {
+        listen 80;
+        server_name _;
+
+        root /usr/share/nginx/html;
+
+        # Arquivos estáticos
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+
+        # Proxy para o Node.js
+        location /api/ {
+            proxy_pass http://127.0.0.1:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
     }
 }
