--- a/DarkAccess/Labs/lab02-osdb/Dockerfile
+++ b/DarkAccess/Labs/lab02-osdb/Dockerfile
@@ -8,9 +8,9 @@ RUN adduser -D -h /home/labuser labuser
 
 WORKDIR /lab
 
-# copiar todos os arquivos do lab
+# copiar arquivos principais do lab
 COPY files/ ./files/
-COPY run.sh seed_db.sql server.js index.html nginx.conf ./
+COPY run.sh seed_db.sql server.js index.html ./
 
 # instalar dependências do Node
 RUN npm install express body-parser
@@ -23,11 +23,16 @@ RUN chmod +x /lab/run.sh && \
 RUN sqlite3 /lab/main.sqlite < /lab/seed_db.sql && \
     chown labuser:labuser /lab/main.sqlite
 
-# copiar nginx.conf para o Nginx
+# remover config padrão do nginx e adicionar nossas configs
 RUN rm -f /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# copiar nginx.conf PRINCIPAL
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# copiar o server block
+COPY default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80 3000
 
 # iniciar Node + Nginx no mesmo container
-CMD sh -c "node server.js & nginx -g 'daemon off;'"
+CMD ["sh", "-c", "node server.js & nginx -g 'daemon off;'"]
