--- a/DarkAccess/Labs/lab02-osdb/nginx.conf
+++ b/DarkAccess/Labs/lab02-osdb/nginx.conf
@@ -1,17 +1,17 @@
-user nginx;
-worker_processes auto;
+server {
+    listen 80;
+    server_name _;
 
-events {
-    worker_connections 1024;
-}
+    root /usr/share/nginx/html;
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
 
-    sendfile        on;
-    keepalive_timeout  65;
-
-    # Carrega todos os server blocks
-    include /etc/nginx/conf.d/*.conf;
+    location /api/ {
+        proxy_pass http://lab02-app:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
