--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,13 +57,24 @@ services:
       - "8080:80"
     networks:
       - darkaccess-net
-  lab02_osdb:
-    image: darkaccess/lab02-osdb:latest
-    container_name: lab02_osdb
+  lab02-app:
+    image: lab02-osdb
+    build: .
+    container_name: lab02-app
+    expose:
+      - "3000"
+
+  lab02-nginx:
+    image: nginx:stable-alpine
+    container_name: lab02-nginx
     ports:
       - "8081:80"
-    networks:
-      - darkaccess-net
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./index.html:/usr/share/nginx/html/index.html
+      - ./files:/usr/share/nginx/html/files
+    depends_on:
+      - lab02-app
 networks:
   darkaccess-net:
     driver: bridge
