--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - db_darkaccess
     networks:
       - darkaccess-net
+
   traefik:
     image: traefik:v3.0
     command:
@@ -50,6 +51,7 @@ services:
     networks:
       - darkaccess-net
       - challenge-net
+
   xss_lab:
     image: xss-challenge-xss-challenge:latest
     container_name: xss_lab
@@ -57,12 +59,15 @@ services:
       - "8080:80"
     networks:
       - darkaccess-net
+
   lab02-app:
+    build: ./DarkAccess/Labs/lab02-osdb
     image: lab02-osdb
-    build: .
     container_name: lab02-app
     expose:
       - "3000"
+    networks:
+      - darkaccess-net
 
   lab02-nginx:
     image: nginx:stable-alpine
@@ -70,17 +75,20 @@ services:
     ports:
       - "8081:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./index.html:/usr/share/nginx/html/index.html
-      - ./files:/usr/share/nginx/html/files
+      - ./DarkAccess/Labs/lab02-osdb/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./DarkAccess/Labs/lab02-osdb/index.html:/usr/share/nginx/html/index.html
+      - ./DarkAccess/Labs/lab02-osdb/files:/usr/share/nginx/html/files
     depends_on:
       - lab02-app
+    networks:
+      - darkaccess-net
+
 networks:
   darkaccess-net:
     driver: bridge
 
   challenge-net:
     driver: bridge
-    
+
 volumes:
   db_data:
