--- a/DarkAccess/Labs/lab02-osdb/Dockerfile
+++ b/DarkAccess/Labs/lab02-osdb/Dockerfile
@@ -1,15 +1,24 @@
 FROM node:18-alpine
 
+# instalar utilitários necessários
 RUN apk add --no-cache bash sqlite coreutils
 
 WORKDIR /lab
 
+# copiar arquivos necessários do Node
+COPY server.js ./
+
+# copiar arquivos restantes
+COPY run.sh seed_db.sql index.html nginx.conf ./
 COPY files/ ./files/
-COPY run.sh seed_db.sql server.js package.json package-lock.json index.html ./
 
-RUN npm install
+# instalar dependências do Node
+RUN npm install express body-parser
 
+# permissões
 RUN chmod +x /lab/run.sh
+
+# criar banco inicial
 RUN sqlite3 /lab/main.sqlite < /lab/seed_db.sql
 
 EXPOSE 3000
