ajuste nos containers dos labs

--- a/DarkAccess/Back-End/.env
+++ b/DarkAccess/Back-End/.env
@@ -7,6 +7,10 @@ DB_PORT=5432
 API_HOST=34.132.60.57
 API_PORT=3001
 
+# Configuração Docker Labs (IMPORTANTE!)
+NODE_ENV=production
+DOMAIN=34.132.60.57
+USE_TRAEFIK=false
 
 VPN_USER=obscuro
 VPN_PASS=G2p<MmkQVO$`mP4yS&C1
