ajuste no back-end

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /usr/bin/docker:/usr/bin/docker
       - ./DarkAccess/Back-End:/app
-    network_mode: host  # Permite criar containers com portas diretas no host
     environment:
       DB_HOST: db_darkaccess
       DB_USER: pinguin
@@ -36,6 +35,8 @@ services:
       USE_TRAEFIK: "false"
     depends_on:
       - db_darkaccess
+    networks:
+      - darkaccess-net
 
   traefik:
     image: traefik:v3.0
