--- a/DarkAccess/Back-End/package.json
+++ b/DarkAccess/Back-End/package.json
@@ -22,11 +22,12 @@
     "http-proxy-middleware": "^3.0.5",
     "once": "^1.4.0",
     "pg": "^8.16.3",
+    "prom-client": "^15.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "@types/jest": "^29.5.11"
+    "supertest": "^6.3.4"
   }
 }
