--- a/DarkAccess/Front-End/package.json
+++ b/DarkAccess/Front-End/package.json
@@ -42,5 +42,10 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "jest-environment-jsdom": "^30.2.0"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-router|react-router-dom)/)"
+    ]
   }
 }
